# icinga2apic

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASING.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
doc/: 1-about.md  2-authentication.md
icinga2api/: actions.py  base.py  objects.py
icinga2apic/: __init__.py  actions.py  base.py  client.py  configfile.py  events.py  exceptions.py  objects.py  status.py
scripts/: release.sh
tests/: test_base.py  test_config.py  test_events.py  test_exceptions.py
