[metadata]
name = icinga2apic
version = 0.7.5
author = Christian Jonak-Möchel, fmnisme, Tobias von der Krone
author_email = christian@jonak.org, fmnisme@gmail.com, tobias@vonderkrone.info
license = 2-Clause BSD
description = Python Icinga 2 API - Continued
keywords = Icinga, api
url = https://github.com/joni1993/icinga2apic
long_description = file: README.md

[options]
packages = icinga2apic
zip_safe = False
install_requires = requests

[semantic_release]
version_variable = setup.py:__version__
